MyGrammarParser.py
# Generated from MyGrammar.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


class MyGrammarParser ( Parser ):

    grammarFileName = "MyGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Double'", "'Int'", "'Date'", "'Contract'", 
                     "'+'", "'-'", "'*'", "'/'", "'and'", "'or'", "'then'", 
                     "'scalaX'", "'scale'", "'truncate'", "'->'", "'::'", 
                     "'('", "')'", "'one'", "','", "'.'", "'='", "'TimeFunc'", 
                     "'mkdate'", "'give'" ]

    symbolicNames = [ "<INVALID>", "DOUBLE", "INT", "DATE", "CONTRACT", 
                      "PLUS", "MINUS", "TIMES", "DIV", "AND", "OR", "THEN", 
                      "SCALAX", "SCALA", "TRUNCATE", "TO", "ASSIGNMENT", 
                      "LPAREN", "RPAREN", "ONE", "COMMA", "DOT", "EQUAL", 
                      "TIMEFUNCT", "MKDATE", "GIVE", "WS", "NUMBER", "LOWERCASE" ]

    RULE_program = 0
    RULE_lowercasenumber = 1
    RULE_name = 2
    RULE_method = 3
    RULE_funcall = 4
    RULE_assign = 5
    RULE_kind = 6
    RULE_operands = 7
    RULE_deffunc = 8
    RULE_integer = 9
    RULE_doub = 10
    RULE_dat = 11
    RULE_arg = 12
    RULE_expr = 13
    RULE_plusexpr = 14
    RULE_multexpr = 15
    RULE_expression = 16
    RULE_args = 17
    RULE_functions = 18

    ruleNames =  [ "program", "lowercasenumber", "name", "method", "funcall", 
                   "assign", "kind", "operands", "deffunc", "integer", "doub", 
                   "dat", "arg", "expr", "plusexpr", "multexpr", "expression", 
                   "args", "functions" ]

    EOF = Token.EOF
    DOUBLE=1
    INT=2
    DATE=3
    CONTRACT=4
    PLUS=5
    MINUS=6
    TIMES=7
    DIV=8
    AND=9
    OR=10
    THEN=11
    SCALAX=12
    SCALA=13
    TRUNCATE=14
    TO=15
    ASSIGNMENT=16
    LPAREN=17
    RPAREN=18
    ONE=19
    COMMA=20
    DOT=21
    EQUAL=22
    TIMEFUNCT=23
    MKDATE=24
    GIVE=25
    WS=26
    NUMBER=27
    LOWERCASE=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.AssignContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.AssignContext,i)


        def funcall(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.FuncallContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.FuncallContext,i)


        def method(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.MethodContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.MethodContext,i)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MyGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 41
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 38
                    self.assign()
                    pass

                elif la_ == 2:
                    self.state = 39
                    self.funcall()
                    pass

                elif la_ == 3:
                    self.state = 40
                    self.method()
                    pass


                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MyGrammarParser.AND) | (1 << MyGrammarParser.OR) | (1 << MyGrammarParser.THEN) | (1 << MyGrammarParser.SCALAX) | (1 << MyGrammarParser.SCALA) | (1 << MyGrammarParser.TRUNCATE) | (1 << MyGrammarParser.ONE) | (1 << MyGrammarParser.TIMEFUNCT) | (1 << MyGrammarParser.MKDATE) | (1 << MyGrammarParser.GIVE) | (1 << MyGrammarParser.LOWERCASE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LowercasenumberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOWERCASE(self):
            return self.getToken(MyGrammarParser.LOWERCASE, 0)

        def NUMBER(self):
            return self.getToken(MyGrammarParser.NUMBER, 0)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_lowercasenumber

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLowercasenumber" ):
                listener.enterLowercasenumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLowercasenumber" ):
                listener.exitLowercasenumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLowercasenumber" ):
                return visitor.visitLowercasenumber(self)
            else:
                return visitor.visitChildren(self)




    def lowercasenumber(self):

        localctx = MyGrammarParser.LowercasenumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_lowercasenumber)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            _la = self._input.LA(1)
            if not(_la==MyGrammarParser.NUMBER or _la==MyGrammarParser.LOWERCASE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOWERCASE(self):
            return self.getToken(MyGrammarParser.LOWERCASE, 0)

        def lowercasenumber(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.LowercasenumberContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.LowercasenumberContext,i)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName" ):
                return visitor.visitName(self)
            else:
                return visitor.visitChildren(self)




    def name(self):

        localctx = MyGrammarParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(MyGrammarParser.LOWERCASE)
            self.state = 51
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 48
                    self.lowercasenumber() 
                self.state = 53
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MethodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(MyGrammarParser.NameContext,0)


        def ASSIGNMENT(self):
            return self.getToken(MyGrammarParser.ASSIGNMENT, 0)

        def kind(self):
            return self.getTypedRuleContext(MyGrammarParser.KindContext,0)


        def deffunc(self):
            return self.getTypedRuleContext(MyGrammarParser.DeffuncContext,0)


        def TIMEFUNCT(self):
            return self.getToken(MyGrammarParser.TIMEFUNCT, 0)

        def LPAREN(self):
            return self.getToken(MyGrammarParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MyGrammarParser.RPAREN, 0)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_method

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):

        localctx = MyGrammarParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_method)
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MyGrammarParser.LOWERCASE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.name()
                self.state = 55
                self.match(MyGrammarParser.ASSIGNMENT)
                self.state = 58
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MyGrammarParser.DOUBLE, MyGrammarParser.INT, MyGrammarParser.DATE, MyGrammarParser.CONTRACT]:
                    self.state = 56
                    self.kind()
                    pass
                elif token in [MyGrammarParser.LPAREN]:
                    self.state = 57
                    self.deffunc()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [MyGrammarParser.TIMEFUNCT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.match(MyGrammarParser.TIMEFUNCT)
                self.state = 61
                self.match(MyGrammarParser.LPAREN)
                self.state = 62
                self.deffunc()
                self.state = 63
                self.match(MyGrammarParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(MyGrammarParser.NameContext,0)


        def LPAREN(self):
            return self.getToken(MyGrammarParser.LPAREN, 0)

        def args(self):
            return self.getTypedRuleContext(MyGrammarParser.ArgsContext,0)


        def RPAREN(self):
            return self.getToken(MyGrammarParser.RPAREN, 0)

        def MKDATE(self):
            return self.getToken(MyGrammarParser.MKDATE, 0)

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.ArgContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.ArgContext,i)


        def COMMA(self):
            return self.getToken(MyGrammarParser.COMMA, 0)

        def functions(self):
            return self.getTypedRuleContext(MyGrammarParser.FunctionsContext,0)


        def ONE(self):
            return self.getToken(MyGrammarParser.ONE, 0)

        def GIVE(self):
            return self.getToken(MyGrammarParser.GIVE, 0)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_funcall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncall" ):
                listener.enterFuncall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncall" ):
                listener.exitFuncall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncall" ):
                return visitor.visitFuncall(self)
            else:
                return visitor.visitChildren(self)




    def funcall(self):

        localctx = MyGrammarParser.FuncallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcall)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MyGrammarParser.LOWERCASE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.name()
                self.state = 68
                self.match(MyGrammarParser.LPAREN)
                self.state = 69
                self.args()
                self.state = 70
                self.match(MyGrammarParser.RPAREN)
                pass
            elif token in [MyGrammarParser.MKDATE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.match(MyGrammarParser.MKDATE)
                self.state = 73
                self.match(MyGrammarParser.LPAREN)
                self.state = 74
                self.arg()
                self.state = 75
                self.match(MyGrammarParser.COMMA)
                self.state = 76
                self.arg()
                self.state = 77
                self.match(MyGrammarParser.RPAREN)
                pass
            elif token in [MyGrammarParser.AND, MyGrammarParser.OR, MyGrammarParser.THEN, MyGrammarParser.SCALAX, MyGrammarParser.SCALA, MyGrammarParser.TRUNCATE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.functions()
                self.state = 80
                self.match(MyGrammarParser.LPAREN)
                self.state = 81
                self.arg()
                self.state = 82
                self.match(MyGrammarParser.COMMA)
                self.state = 83
                self.arg()
                self.state = 84
                self.match(MyGrammarParser.RPAREN)
                pass
            elif token in [MyGrammarParser.ONE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.match(MyGrammarParser.ONE)
                self.state = 87
                self.match(MyGrammarParser.LPAREN)
                self.state = 88
                self.match(MyGrammarParser.RPAREN)
                pass
            elif token in [MyGrammarParser.GIVE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                self.match(MyGrammarParser.GIVE)
                self.state = 90
                self.match(MyGrammarParser.LPAREN)
                self.state = 91
                self.arg()
                self.state = 92
                self.match(MyGrammarParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(MyGrammarParser.NameContext,0)


        def EQUAL(self):
            return self.getToken(MyGrammarParser.EQUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(MyGrammarParser.ExprContext,0)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = MyGrammarParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.name()
            self.state = 97
            self.match(MyGrammarParser.EQUAL)
            self.state = 98
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class KindContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MyGrammarParser.INT, 0)

        def DOUBLE(self):
            return self.getToken(MyGrammarParser.DOUBLE, 0)

        def DATE(self):
            return self.getToken(MyGrammarParser.DATE, 0)

        def CONTRACT(self):
            return self.getToken(MyGrammarParser.CONTRACT, 0)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_kind

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKind" ):
                listener.enterKind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKind" ):
                listener.exitKind(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKind" ):
                return visitor.visitKind(self)
            else:
                return visitor.visitChildren(self)




    def kind(self):

        localctx = MyGrammarParser.KindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_kind)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MyGrammarParser.DOUBLE) | (1 << MyGrammarParser.INT) | (1 << MyGrammarParser.DATE) | (1 << MyGrammarParser.CONTRACT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperandsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(MyGrammarParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(MyGrammarParser.MINUS, 0)

        def DIV(self):
            return self.getToken(MyGrammarParser.DIV, 0)

        def TIMES(self):
            return self.getToken(MyGrammarParser.TIMES, 0)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_operands

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperands" ):
                listener.enterOperands(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperands" ):
                listener.exitOperands(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperands" ):
                return visitor.visitOperands(self)
            else:
                return visitor.visitChildren(self)




    def operands(self):

        localctx = MyGrammarParser.OperandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_operands)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MyGrammarParser.PLUS) | (1 << MyGrammarParser.MINUS) | (1 << MyGrammarParser.TIMES) | (1 << MyGrammarParser.DIV))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeffuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(MyGrammarParser.LPAREN, 0)

        def kind(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.KindContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.KindContext,i)


        def RPAREN(self):
            return self.getToken(MyGrammarParser.RPAREN, 0)

        def TO(self):
            return self.getToken(MyGrammarParser.TO, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.COMMA)
            else:
                return self.getToken(MyGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_deffunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeffunc" ):
                listener.enterDeffunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeffunc" ):
                listener.exitDeffunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeffunc" ):
                return visitor.visitDeffunc(self)
            else:
                return visitor.visitChildren(self)




    def deffunc(self):

        localctx = MyGrammarParser.DeffuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_deffunc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MyGrammarParser.LPAREN)
            self.state = 105
            self.kind()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MyGrammarParser.COMMA:
                self.state = 106
                self.match(MyGrammarParser.COMMA)
                self.state = 107
                self.kind()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.match(MyGrammarParser.RPAREN)
            self.state = 114
            self.match(MyGrammarParser.TO)
            self.state = 115
            self.kind()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IntegerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(MyGrammarParser.NameContext,0)


        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.NUMBER)
            else:
                return self.getToken(MyGrammarParser.NUMBER, i)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_integer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger" ):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)




    def integer(self):

        localctx = MyGrammarParser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_integer)
        self._la = 0 # Token type
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MyGrammarParser.LOWERCASE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.name()
                pass
            elif token in [MyGrammarParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 119 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 118
                    self.match(MyGrammarParser.NUMBER)
                    self.state = 121 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==MyGrammarParser.NUMBER):
                        break

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DoubContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(MyGrammarParser.NameContext,0)


        def DOT(self):
            return self.getToken(MyGrammarParser.DOT, 0)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(MyGrammarParser.NUMBER)
            else:
                return self.getToken(MyGrammarParser.NUMBER, i)

        def getRuleIndex(self):
            return MyGrammarParser.RULE_doub

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoub" ):
                listener.enterDoub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoub" ):
                listener.exitDoub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoub" ):
                return visitor.visitDoub(self)
            else:
                return visitor.visitChildren(self)




    def doub(self):

        localctx = MyGrammarParser.DoubContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_doub)
        self._la = 0 # Token type
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MyGrammarParser.LOWERCASE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.name()
                pass
            elif token in [MyGrammarParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 126
                    self.match(MyGrammarParser.NUMBER)
                    self.state = 129 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==MyGrammarParser.NUMBER):
                        break

                self.state = 131
                self.match(MyGrammarParser.DOT)
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MyGrammarParser.NUMBER:
                    self.state = 132
                    self.match(MyGrammarParser.NUMBER)
                    self.state = 137
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(MyGrammarParser.NameContext,0)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_dat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDat" ):
                listener.enterDat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDat" ):
                listener.exitDat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDat" ):
                return visitor.visitDat(self)
            else:
                return visitor.visitChildren(self)




    def dat(self):

        localctx = MyGrammarParser.DatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_dat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MyGrammarParser.ExprContext,0)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = MyGrammarParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_arg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MyGrammarParser.ExpressionContext,0)


        def plusexpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyGrammarParser.PlusexprContext)
            else:
                return self.getTypedRuleContext(MyGrammarParser.PlusexprContext,i)


        def getRuleIndex(self):
            return MyGrammarParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

